# rd-methods

./: .dockerignore  .flake8  .gitignore  .shellcheckrc  Dockerfile  README.md  cgmanifest.json  conda-linux-64.lock.yml  conda-lock.yml  environment.yml  install-env  poetry.toml  pyproject.toml  rd-methods.code-workspace  setup-shell  tox.ini  update-conda-lock
.github/workflows/: README.md
.setup/: azcopy.sh  base.sh  check-versions.py  conda.sh  direnv.sh  env.sh  lib-colors.sh
lib/seqr/: io.py  metadata.py
playpen/miah/: compare_metadata_sources.py  example_playpen.py  get_unique.py  rgp_big_fam_file.py  rgp_xlsx_to_fam.py  rgp_xlsx_to_hpo.py
scripts/: example_script.py
scripts/rgp/: rgp_aip_external_label_generator.py  rgp_aip_input_generator.py  rgp_group_assigner.py  run_aip_external_label_generator.sh  run_aip_input_generator.sh  run_rgp_group_assigner.sh
scripts/rgp_cagi/: rgp_xlsx_to_fam.py
src/seqr/: metadata.py
test/: test_example.py
test/data/: invalid_subjects.tsv  invalid_tags.tsv  valid_subjects.tsv  valid_tags.tsv
test/seqr/: test_externallabelwriter.py  test_hpowriter.py  test_pedigreewriter.py  test_seqrsubjects.py  test_seqrtags.py
workbooks/: example_workbook.py
workbooks/rgp/: cagi_history_file.py  explore_metadata.py  generate_folds.py  split_vcf_sandbox.py
